# IDIG4002

./: README.md
Lab1_materials/: CMakeLists.txt
Lab2/pbrt2/: lighting.pbrt
Lab3/: OpenGLGeometryTransformation.pptx
